--- a/Development/asstes/css/styles.css
+++ b/Development/asstes/css/styles.css
@@ -9,6 +9,9 @@ body {
     background-repeat: no-repeat; */
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url("./Thekr1.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -80,4 +83,13 @@ h1 {
 
 .btn-thekr:focus {
   outline: none;
+}
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+#athkar{
+  cursor: pointer;
 }
